--- a/package.json
+++ b/package.json
@@ -16,25 +16,34 @@
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
     "@angular/forms": "~8.2.3",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/platform-server": "^8.2.5",
     "@angular/router": "~8.2.3",
+    "@angular/router-deprecated": "^2.0.0-rc.2",
     "@nestjs/common": "^6.6.7",
     "@nestjs/core": "^6.6.7",
+    "nativescript-angular": "^8.2.1",
+    "nativescript-webview-interface": "^1.4.3",
     "nodemon": "^1.19.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.3",
+    "tns-core-modules": "^6.1.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.1",
     "@angular/cli": "~8.3.1",
     "@angular/compiler-cli": "~8.2.3",
     "@angular/language-service": "~8.2.3",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "babel-traverse": "^6.26.0",
+    "babel-types": "^6.26.0",
+    "babylon": "^6.18.0",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -43,6 +52,8 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "lazy": "^1.0.11",
+    "nativescript-dev-typescript": "^0.10.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
