--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapp",
-  "version": "0.0.0",
+  "version": "2.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,8 +22,10 @@
     "@angular/platform-server": "^8.2.5",
     "@angular/router": "~8.2.3",
     "@angular/router-deprecated": "^2.0.0-rc.2",
+    "@getbase/micro-grid": "^4.1.0",
     "@nestjs/common": "^6.6.7",
     "@nestjs/core": "^6.6.7",
+    "flexboxgrid": "^6.3.1",
     "nativescript-angular": "^8.2.1",
     "nativescript-webview-interface": "^1.4.3",
     "nodemon": "^1.19.2",
@@ -31,6 +33,7 @@
     "rxjs": "^6.5.3",
     "tns-core-modules": "^6.1.0",
     "tslib": "^1.10.0",
+    "xscroll": "^3.2.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
@@ -58,5 +61,21 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.3.1.",
+  "main": "index.html",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/comeoninc/cframework.git"
+  },
+  "keywords": [
+    "amich",
+    "comeoninc"
+  ],
+  "author": "comeoninc.com",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/comeoninc/cframework/issues"
+  },
+  "homepage": "https://github.com/comeoninc/cframework#readme"
 }
