--- a/package.json
+++ b/package.json
@@ -11,43 +11,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.3",
+    "@angular/animations": "^8.2.5",
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
-    "@angular/forms": "~8.2.3",
+    "@angular/forms": "^8.2.5",
     "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/platform-server": "^8.2.5",
     "@angular/router": "~8.2.3",
     "@angular/router-deprecated": "^2.0.0-rc.2",
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "@getbase/micro-grid": "^4.1.0",
     "@nestjs/common": "^6.6.7",
     "@nestjs/core": "^6.6.7",
+    "@types/chart.js": "^2.8.4",
+    "angular-bootstrap-md": "^8.2.0",
+    "angularjs-template-2": "^3.0.8",
+    "chart.js": "^2.8.0",
+    "class": "^0.1.4",
+    "core-js": "^3.2.1",
     "flexboxgrid": "^6.3.1",
+    "hammerjs": "^2.0.8",
     "nativescript-angular": "^8.2.1",
     "nativescript-webview-interface": "^1.4.3",
     "nodemon": "^1.19.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.3",
     "tns-core-modules": "^6.1.0",
-    "tslib": "^1.10.0",
     "xscroll": "^3.2.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.1",
-    "@angular/cli": "~8.3.1",
-    "@angular/compiler-cli": "~8.2.3",
-    "@angular/language-service": "~8.2.3",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.3",
+    "@angular-devkit/build-ng-packagr": "^0.803.3",
+    "@angular-devkit/core": "^8.3.3",
+    "@angular-devkit/schematics": "^8.3.3",
+    "@angular/cli": "^8.3.3",
+    "@angular/compiler-cli": "^8.2.5",
+    "@angular/language-service": "^8.2.5",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^8.9.5",
     "babel-traverse": "^6.26.0",
     "babel-types": "^6.26.0",
     "babylon": "^6.18.0",
     "codelyzer": "^5.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -57,10 +68,17 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "lazy": "^1.0.11",
     "nativescript-dev-typescript": "^0.10.0",
+    "ng-packagr": "^5.5.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "schematics-utilities": "^1.1.3",
+    "ts-node": "^7.0.1",
+    "tsickle": "^0.37.0",
+    "tslib": "^1.10.0",
+    "tslint": "^5.15.0",
+    "typescript": "^3.4.5",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8",
+    "webpack-node-externals": "^1.7.2"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.3.1.",
   "main": "index.html",
