--- a/angular.json
+++ b/angular.json
@@ -28,11 +28,20 @@
               "src/assets"
             ],
             "styles": [
-		"node_modules/flexboxgrid/src/css/flexboxgrid.css",
+	    	"node_modules/flexboxgrid/src/css/flexboxgrid.css",
+		"node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
+		"node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
+		"node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
+		"node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
+	    	"node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+		"node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
 		"node_modules/@getbase/micro-grid/index.css",
+		"node_modules/flexboxgrid/vendor/css/normalize.css",
 		"src/styles.scss"
             ],
             "scripts": [
+	        "node_modules/chart.js/dist/Chart.js",
+		"node_modules/hammerjs/hammer.min.js",
 		"node_modules/flexboxgrid/vendor/js/modernizr.flexbox.js",
 		"node_modules/xscroll/src/index.js"
 	    ]
